This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php



Version 387    2023-August-18

--Added support for +containOffsetX/Y and +containOffsetBottomX/Y to micro-
  adjust the automatic container position of an object.  Needed for how empty
  glass bottles position on the table.  Part of jasonrohrer/OneLifeData7#1066




Server Fixes

--Fixed bug that was preventing cursing living players by name.  Fixes #909

--Fixed to send an intermediary PU message whenver a MOVE chain takes the
  player more than 16 tiles away from where their last PU message occured.
  This prevents out-of-date player status (like what they are holding/riding/
  wearing) from being presented to other players when they move back into range
  using a long move chain after being out of range, when their status changed
  while they were out of range.  Before, no PU message would be sent until the
  very end of a long move chain.  No more players zipping onto the screen and
  suddenly having their delivery truck appear around them.  No more players
  squeaking into view with a hand cart that they are no longer actually
  holding, and then suddenly seeing the hand cart disappear when they stop
  moving.  This still might be an issue on modded clients with a zoomed out
  view, because the threshold is only 16 tiles, but it seems to work fine in
  all cases on the official client.  Fixes #906

--Fixed bug that sent metadata over radios.  Fixes #907




Version 385    2023-July-11

--Added new SWAP protocol message to differentiate between right-clicking on
  the bare ground around an object and right-clicking the object itself.  This
  allows right-clicking the ground around a container to swap the held item
  with the container itself, instead of putting/swapping held object into the
  container.  You now have to right-click directly on a container to put/swap